--- a/test/product/deleteproduct.html
+++ b/test/product/deleteproduct.html
@@ -31,7 +31,7 @@
       .then((data) => {
         let optionsHtml = "";
   
-        for (const product of data) {
+        for (const product of data.items) {
           optionsHtml += `
           <option value="${product.id}">${product.name}</option>
         `;
