--- a/test/user/deleteuser.html
+++ b/test/user/deleteuser.html
@@ -31,7 +31,7 @@
       .then((data) => {
         let optionsHtml = "";
   
-        for (const user of data) {
+        for (const user of data.items) {
           optionsHtml += `
           <option value="${user.id}">${user.nickname}</option>
         `;
