--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,10 @@
   <a href="user/listuser.html">Liste des utilisateurs</a>
   <a href="user/deleteuser.html">Supprimer un utilisateur</a>
   <a href="user/updateuser.html">Modifier un utilisateur</a>
+<h2>Clients</h2>
+  <a href="client/listclient.html">Lister les clients</a>
+  <a href="client/deleteclient.html">Supprimer un client</a>
+  <a href="client/postclient.html">créer un nouveau client</a>
 </body>
 
 </html>
