--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
   <a href="client/listclient.html">Lister les clients</a>
   <a href="client/deleteclient.html">Supprimer un client</a>
   <a href="client/postclient.html">créer un nouveau client</a>
+  <a href="client/updateclient.html">Modifier un client</a>
 </body>
 
 </html>
