addition for the client to see the users assigned to him

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
   <a href="client/deleteclient.html">Supprimer un client</a>
   <a href="client/postclient.html">créer un nouveau client</a>
   <a href="client/updateclient.html">Modifier un client</a>
+  <a href="client/listuserclient.html">Voir les utilisateurs lié à un client</a>
 </body>
 
 </html>
